# gstwebrtcapp

./: README.md  RELEASE.md  install.sh  pyproject.toml
docker/: Dockerfile  Dockerfile-cpu  Dockerfile-cuda  README.md  compose.yml  mosquitto.conf
docker/cuda/: Dockerfile
examples/: README.md  test_multiple.py
gstwebrtcapp/: check_gst_bindings.py  example.py
gstwebrtcapp/ahoyapp/: app.py  connector.py
gstwebrtcapp/apps/: app.py  pipelines.py
gstwebrtcapp/apps/ahoyapp/: app.py  connector.py
gstwebrtcapp/apps/sinkapp/: app.py  connector.py
gstwebrtcapp/control/: agent.py  controller.py
gstwebrtcapp/control/cc/: gcc_agent.py
gstwebrtcapp/control/drl/: agent.py  callbacks.py  config.py  env.py  manager.py  mconfigurator.py  mdp.py  reward.py
gstwebrtcapp/control/drl/hparams/: ppo.json  sac.json
gstwebrtcapp/control/drl/samples/: browser_stats_samples.json
gstwebrtcapp/control/drl_offline/: agent.py  config.py
gstwebrtcapp/control/recorder/: agent.py
gstwebrtcapp/control/safety/: agent.py  switcher.py
gstwebrtcapp/media/: preset.py
gstwebrtcapp/message/: broker.py  client.py
gstwebrtcapp/network/: controller.py  trace.py
gstwebrtcapp/run/: controller.py  wrappers.py
gstwebrtcapp/utils/: base.py  gst.py  utils.py  webrtc.py
tools/rtt-checker/: go.mod  go.sum  main.go  mqtt.go  mqtt_conf.yaml
tools/webrtc-ui-patches/: README.MD  patch.sh
tools/webrtc-ui-patches/flexbox-layout/: index.html
